Senior Construction Project Manager - Can work remote - CBRE Careers. Career &amp;amp; Postdoc Services Program Manager. Shore Consulting Deployment & Operations / Project Manager/Leader / Level 3 | SmartRecruiters. Dent Wizard International Careers - Regional Project Manager. Metia Project Manager | SmartRecruiters. Cortland - Construction Project Manager - Austin - 9999. ADARA - Technical Project Manager. Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN. Schneider Electric NAM Careers - Project Manager. Palo Alto Networks Careers - Senior Technical Program Manager (Public Cloud). Bey Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters. Ancestry - Creative Project Manager - Marketing - Full Time Contract. Program Manager (Electricity Markets and Policy Group) - LBL Careers. ECC Careers - Senior Project Manager. ECC Careers - Senior Project Manager - Construction. ECC Careers - Sr. Project Manager. Project Manager | Integrity Placement Group. Job Application for Area Food Voucher Deputy Program Manager-Temporary at GOAL Syria. Job Application for WASH Deputy Programme Manager – implementation  at GOAL Syria. Job Application for Technical Program Manager at ACV Auctions. Job Application for Program Manager - Support Operations at GitHub. Ayla Networks Careers - Technical Project Manager. Project Manager - Facilities - Trulieve - Career Page. Turner & Townsend Construction Project Manager – Seattle, Washington | SmartRecruiters. Section Leader  Research Services &amp; Resource Discovery (Program Manager 2/3) Job Opening in Los Alamos, New Mexico - ALA JobLIST | Jobs in Library &amp; Information Science &amp; Technology. Ingram Micro Careers - IT Program Manager (SAP). Project Manager  job with Travel Trade Recruitment | 172603.     Refugee Resettlement Program Manager at RAICES . Senior-Level Project Manager - Austin, TX, US | Jobs | Archinect. Visa Privacy Program Manager | SmartRecruiters. Ubisoft IT Project Manager (Scrum Master) | 

--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://cbre.referrals.selectminds.com/CBREGXWbSm'>Senior Construction Project Manager - Can work remote - CBRE Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.scripps.edu/career-andamp-postdoc-services-program-manager/job/11710572'>Career &amp;amp; Postdoc Services Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999698429771-deployment-operations-project-manager-leader-level-3'>Shore Consulting Deployment & Operations / Project Manager/Leader / Level 3 | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
@@ -190,11 +202,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.nesgt.com/job/107430060323/sap-project-slash-programme-manager-1/'>SAP Project/Programme Manager with ref. BH-117757-1 - NES Global Talent</a></h5> 
+<h5><a href='https://www.nesgt.com/job/107430060323/sap-project-slash-programme-manager-1/'>SAP Project/Programme Manager with ref. BH-117757-1 - NES Global Talent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archinect.com/jobs/entry/150167171/design-developer-project-manager-for-sculptor'>Design Developer/Project Manager for Sculptor - New York, NY, US | Jobs | Archinect</a></h5> 
+<h5><a href='https://archinect.com/jobs/entry/150167171/design-developer-project-manager-for-sculptor'>Design Developer/Project Manager for Sculptor - New York, NY, US | Jobs | Archinect</a></h5> 
 <p><span class="badge badge-light">New York, NYNew York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -290,7 +302,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/yelp/e3b07897-95c2-4af2-b72e-c9cdfd541bbc'>Yelp - Program Manager, Integrated Marketing</a></h5> 
+<h5><a href='https://jobs.lever.co/yelp/e3b07897-95c2-4af2-b72e-c9cdfd541bbc'>Yelp - Program Manager, Integrated Marketing</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -358,7 +370,7 @@
 Policy and all answers provided by me within this application are true and correct
 .</p>
 <hr/>
-<h5><a href='http://stellarinnovations.applytojob.com/apply/5iRCxooPcK/IT-Project-Manager'>IT Project Manager - Stellar Innovations - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://stellarinnovations.applytojob.com/apply/5iRCxooPcK/IT-Project-Manager'>IT Project Manager - Stellar Innovations - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -374,7 +386,7 @@ Policy and all answers provided by me within this application are true and corre
 <p><span class="badge badge-light">San Antonio, Texas</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oLf4afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n39TmMwI'>ServiceNow Careers - Customer Experience Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oLf4afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n39TmMwI'>ServiceNow Careers - Customer Experience Program Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Santa Clara, California  San Francisco Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -432,7 +444,7 @@ Policy and all answers provided by me within this application are true and corre
 <p><span class="badge badge-light">Canada Canada Waterloo, Canada  London, ON  Canada</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438196-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438196-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -448,19 +460,6 @@ communication skills to lead all phases of our website redesign projects.</p>
 <h5><a href='https://brightwave.applytojob.com/apply/L7QNA6zCMT/Sr-Project-Manager'>Sr. Project Manager - BrightWave - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Apply to Sr. Project Manager at BrightWave in Atlanta, GA.</p>
-<hr/>
-<h5><a href='https://cmm.applytojob.com/apply/YlkhZ6eTWR/Project-Manager-Shared-Tech'>Project Manager, Shared Tech - CoverMyMeds - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 15, 2019 ... Apply to Project Manager, Shared Tech at CoverMyMeds in Columbus, OH.</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://harrisassociates.applytojob.com/apply/kcAiAFfc5U/Project-Manager'>Project Manager - Harris & Associates - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 17, 2019 ... Apply to Project Manager at Harris & Associates in Concord, CA.</p>
-<hr/>
-<h5><a href='https://cleverdevicesltd.applytojob.com/apply/ogJZKGQJNg/Senior-Project-Manager'>Senior Project Manager - Clever Devices - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 17, 2019 ... Oversee complex projects being delivered to external customers, within the 
-public transit space, where the deliverables have direct ties to revenue.</p>
 <hr/>
 
 
