Palantir Technologies - People Systems Product Manager. Palantir Technologies - People Systems Product Manager. Omio Senior Product Manager Coverage Tribe (m / f / d) | SmartRecruiters. Job Application for Product Manager, Cloud Accounting Ecosystem at FreshBooks. New Relic Careers - Field Product Manager - Telemetry Platform. Job @ kfzteile24 (Berlin): Senior Product Manager ... | JOIN. ServiceNow Careers - Staff Product Manager, Digital Talent Experiences - Core HCM. TitanData Inc. Technical Product Manager - Devops | SmartRecruiters. TitanData Inc. Technical Product Owner - Data Transformation | SmartRecruiters. TitanData Inc. Technical Product Owner - Digital Offers and Promotions | SmartRecruiters. Santander Consumer USA Careers - Product Manager II. Ayla Networks Careers - Senior Product Manager. Medfar Product Owner | SmartRecruiters. Job Application for Senior Product Manager at Soroco. Points International Product Designer | SmartRecruiters. Bosch Group Senior Product Manager | SmartRecruiters. Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters. Knock, Inc - Senior Product Manager. Job @ Spryker System (Berlin): Product Manager - S... | JOIN. Product Owner Job Opening in Chicago, Illinois - Illinois Technology Association Career Center.       Product Manager - Oyster Financial Inc     . Splunk Careers - Product Manager - Machine Learning Content. Splunk Careers - Senior Product Manager/Product Manager - Developer Programs. Job @ Coachhub (Berlin): Senior Product Manager (m... | JOIN. Avery Dennison Product Manager - Digital Printing Materials (Graphics) | SmartRecruiters. Rekki - Product Designer.     Sr. Product Manager at OYO . Product Manager - Resy Global Service - Resy Network Inc - Career Page. Product Manager - Snapsheet - Career Page. Omio Senior Product Manager Growth (m / f / d) | SmartRecruiters. Trade Me Careers - Product Manager - Senior. Omio Senior Product Manager Flights/Air (m / f / d) | S

--- a/product-manager.html
+++ b/product-manager.html
@@ -40,7 +40,23 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/newrelic/job/oGbrbfwd'>New Relic Careers - Field Product Manager - Telemetry Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/palantir/a0ccde7f-5f26-477b-b4ce-3532b4b087a7'>Palantir Technologies - People Systems Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/palantir/a95f4ce6-c525-466a-b30c-2e4610314be0'>Palantir Technologies - People Systems Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999696601066-senior-product-manager-coverage-tribe-m-f-d-'>Omio Senior Product Manager Coverage Tribe (m / f / d) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Berlin, Germany</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1937477'>Job Application for Product Manager, Cloud Accounting Ecosystem at FreshBooks</a></h5> 
+<p><span class="badge badge-light">Toronto, ON</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/oGbrbfwd'>New Relic Careers - Field Product Manager - Telemetry Platform</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  San Francisco, California  Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -68,7 +84,7 @@
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ayla-networks/job/othebfwT'>Ayla Networks Careers - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ayla-networks/job/othebfwT'>Ayla Networks Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -114,7 +130,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -130,7 +146,7 @@
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://oyorooms.recruiterbox.com/jobs/fk03izb'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://oyorooms.recruiterbox.com/jobs/fk03izb'>
     Sr. Product Manager at OYO
 </a></h5> 
 <p><span class="badge badge-light">Hyderabad</span></p>
@@ -214,11 +230,11 @@
 <p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hellomavis.com/job/senior-product-manager-for-healthcare-app-3/'>Senior Product Manager (for Healthcare App) - Mavis</a></h5> 
+<h5><a href='https://hellomavis.com/job/senior-product-manager-for-healthcare-app-3/'>Senior Product Manager (for Healthcare App) - Mavis</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4495580002'>Job Application for Senior Product Manager at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4495580002'>Job Application for Senior Product Manager at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -304,7 +320,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/goodeggs/18571cb3-82ba-4126-939b-310638e73299'>Good Eggs - Senior Product Manager, Consumer Experience + Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/goodeggs/18571cb3-82ba-4126-939b-310638e73299'>Good Eggs - Senior Product Manager, Consumer Experience + Growth</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -362,7 +378,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24961-Product-Designer'>
+<h5><a href='https://dribbble.com/jobs/24961-Product-Designer'>
       Product Designer at Input Logic - Nanaimo, BC, Canada - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
@@ -442,22 +458,6 @@ New York, NY.</p>
       Digital Product Designer at New York Public Radio - Spring Street, NY 10013, USA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://the-well.breezy.hr/p/5f67c34a96c0-product-manager'>Product Manager at The Well - Creative Consultants</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://wisersolutions.applytojob.com/apply/IU4CoFEFTM/Product-Designer'>Product Designer - Wiser Solutions - Career Page</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://the-well.breezy.hr/p/cdf642a6e19b-senior-product-manager-casino-poker-content'>Senior Product Manager (Casino/Poker Content) at The Well - Creative Consultants</a></h5> 
-<p><span class="badge badge-light">Halifax, NS</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=okHz9fwt&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=n7EumMwS'>Farfetch Careers - Product Designer - Consumer</a></h5> 
-<p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 
