Research Scientist – Computer Vision and Deep Learning - Airy3D     . Job Application for Deep Learning/Machine Learning Research .... Bosch Group Internship Object Detection with Deep Learning | SmartRecruiters. Bosch Group Deep Learning Engineer | SmartRecruiters. Bosch Group Machine Learning/Deep Learning Engineer/????/???????_BCAI_2020 Campus | SmartRecruiters.       Deep Learning Engineer - Martinsen Mayer     . Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters.       Deep Learning Engineer - Martinsen Mayer     . Run:AI Senior Deep-Learning Software Engineer | SmartRecruiters. Bosch Group Working student in Data Management / Deep Learning / AI | SmartRecruiters. Deep Learning Data Scientist- Financial Services | Averity. Job Application for Deep Learning Framework Research Engineer at Tencent. Job Application for Deep Learning Researcher at Tencent. Job Application for Deep Learning Compression Researcher at Tencent. Job Application for Deep Learning Engineer – Samsung Ads AI Team at Samsung Research America. Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform. Job Application for Deep Learning/Machine Learning Research Engineer at Iris Automation. Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform.       Junior Applied Deep-Learning (m/f/d) | Signatrix - b10     .       Senior Deep Learning Engineer (m/f/d) | Signatrix - b10     . Deep Learning Engineer with Strong iOS ... - Crisalix - Jobs. Computer Science and Engineering: Assistant Professor in Deep Learning (Initial Review 1/07/20) (JPF00769) - UCSC Academic Recruit. Caption Health - Deep Learning Research Engineer. Bell Labs Internship - Mobility Robustness Optimization through Deep Reinforcement Learning - Nokia Careers. Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters. Hayden AI Technologies - Senior Research Scientist - Deep Learning. Job Application for Deep Learning Researcher 

--- a/deep-learning.html
+++ b/deep-learning.html
@@ -134,7 +134,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -142,7 +142,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -478,7 +478,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
